[project]
name = "gguf"
description = "gguf node for comfyui"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies  = ["gguf-connector"]

[project.urls]
Repository = "https://github.com/calcuis/gguf"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "gguf"
DisplayName = "gguf"
Icon = "https://raw.githubusercontent.com/calcuis/logo/master/logo.svg"
